Fix author label alignment.

--- a/src/components/NewPost.module.css
+++ b/src/components/NewPost.module.css
@@ -101,6 +101,9 @@
   flex-flow: row nowrap;
   justify-content: flex-end;
   align-items: center;
+
+  text-align: end;
+  justify-content: end;
 }
 
 .authorDisplay>*:first-child {
